--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
 }
-headers, footer {
+header, footer {
     width: 100%;
     height: 120px;
     background-color: blue;
